--- a/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,10 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <div class="dropdown">
-        <a class="d-flex align-items-center text-decoration-none dropdown-toggle text-dark fw-bold" href="#" role="button"
+        <a class="d-flex align-items-center text-decoration-none dropdown-toggle profile-toggle fw-bold" href="#" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            <div class="bg-light rounded-circle d-flex align-items-center justify-content-center border me-2"
-                style="width: 35px; height: 35px;">
-                <i class="bi bi-person-fill"></i>
+            <div class="profile-avatar d-flex align-items-center justify-content-center border me-2">
+                <i class="bi bi-person-fill profile-icon"></i>
             </div>
         </a>
         <ul class="dropdown-menu dropdown-menu-end shadow border-0 mt-2">
