feat(support): add support pages (help, guidelines, contact, privacy)

--- a/src/EventPlanning.Web/Views/Shared/_Footer.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Footer.cshtml
@@ -30,10 +30,10 @@
             <div class="col-lg-2 col-md-3 col-6">
                 <h5 class="footer-heading">Support</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="footer-link">Help Center</a></li>
-                    <li><a href="#" class="footer-link">Guidelines</a></li>
-                    <li><a href="#" class="footer-link">Contact Us</a></li>
-                    <li><a asp-controller="Home" asp-action="Privacy" class="footer-link">Privacy Policy</a></li>
+                    <li><a asp-controller="Support" asp-action="Index" class="footer-link">Help Center</a></li>
+                    <li><a asp-controller="Support" asp-action="Guidelines" class="footer-link">Guidelines</a></li>
+                    <li><a asp-controller="Support" asp-action="Contact" class="footer-link">Contact Us</a></li>
+                    <li><a asp-controller="Support" asp-action="Privacy" class="footer-link">Privacy Policy</a></li>
                 </ul>
             </div>
 
