--- a/src/EventPlanning.Web/Views/Support/HelpCenter.cshtml
+++ b/src/EventPlanning.Web/Views/Support/HelpCenter.cshtml
@@ -15,8 +15,8 @@
                     <span class="input-group-text ps-3">
                         <i class="bi bi-search"></i>
                     </span>
-                    <input type="text" class="form-control border-0" placeholder="Search Help Center..."
-                        aria-label="Search">
+                    <input type="text" id="helpSearchInput" class="form-control border-0"
+                        placeholder="Search Help Center..." aria-label="Search">
                     <button class="btn btn-primary rounded-end px-4">Search</button>
                 </div>
             </div>
@@ -143,3 +143,5 @@
         </div>
     </div>
 </div>
+
+
