feat(support): add account guide page and polish ui

--- a/src/EventPlanning.Web/Views/Support/HelpCenter.cshtml
+++ b/src/EventPlanning.Web/Views/Support/HelpCenter.cshtml
@@ -36,7 +36,8 @@
         </div>
 
         <div class="col-md-4">
-            <a href="#" class="support-topic-card animate-fade-up" style="animation-delay: 0.2s;">
+            <a asp-controller="Support" asp-action="AccountGuide" class="support-topic-card animate-fade-up"
+                style="animation-delay: 0.2s;">
                 <div class="support-topic-icon">
                     <i class="bi bi-person-gear"></i>
                 </div>
