feat(support): add billing help page

--- a/src/EventPlanning.Web/Views/Support/HelpCenter.cshtml
+++ b/src/EventPlanning.Web/Views/Support/HelpCenter.cshtml
@@ -58,7 +58,8 @@
         </div>
 
         <div class="col-md-4">
-            <a href="#" class="support-topic-card animate-fade-up" style="animation-delay: 0.4s;">
+            <a asp-controller="Support" asp-action="BillingHelp" class="support-topic-card animate-fade-up"
+                style="animation-delay: 0.4s;">
                 <div class="support-topic-icon">
                     <i class="bi bi-credit-card"></i>
                 </div>
