--- a/src/EventPlanning.Web/Views/Shared/_Footer.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Footer.cshtml
@@ -45,6 +45,8 @@
                     @Html.AntiForgeryToken()
                     <input type="email" id="newsletter-email" name="email" class="form-control footer-subscribe-input"
                         placeholder="Enter your email" required>
+                    <!-- Honeypot field (hidden from users, visible to bots) -->
+                    <input type="text" name="website" style="display:none" tabindex="-1" autocomplete="off">
                     <button type="submit" id="newsletter-submit" class="btn btn-primary px-3">Subscribe</button>
                 </form>
             </div>
