Implement modern floating global alerts

--- a/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
 
     <div class="container flex-grow-1">
         <main role="main" class="pb-3">
+            <partial name="_StatusMessage" />
             @RenderBody()
         </main>
     </div>
