--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -11,6 +11,7 @@
 @import url('components/filter-bar.css');
 @import url('components/hero.css');
 @import url('components/footer.css');
+@import url('components/alerts.css');
 
 @import url('components/admin/layout.css');
 @import url('components/admin/navigation.css');
